Fixing structure elements z-index positions

--- a/src/assets/scss/_custom-buefy.scss
+++ b/src/assets/scss/_custom-buefy.scss
@@ -32,7 +32,7 @@ ul.pagination-list {
 
 // navbar
 .navbar.is-dark {
-  z-index: 50;
+  z-index: 52;
 }
 
 // navbar dropdown
